src/styles/cart.css
.cartContainer{

  
  display: grid;
  justify-content: center;
  
}

.cartItemContainer{
  font-weight: 100;
  display: grid;
  grid-template-rows: 80px;
  overflow-y: scroll;
  height: 240px;
  width: fit-content;
  justify-content: center;
}

.cartItem{
  display: grid;
  grid-template-columns: 50px 200px 50px;
  grid-template-rows: 80px;
  height: 80px;
  width: 300px;
  transition: opacity 0.7s;
}

.cartItemImg{
  height: 60px;
  width: 40px;
}

.cartEmpty{
  display: block;
  
  margin-top: 100px;
  text-align: center;
}

.cartItemLink{
  
  
}

.cartItemQuantity{
  position: relative;
  top: -0.75;

  box-sizing: border-box;
  font-size: 12px;
  font-weight: bold;
  text-align: center;
  
  height: 14px;
  width: 14px;
  border-radius: 20px;
  border: solid 1px gray;
  background-color: grey;
  color: white;
}

.cartItemDetails{
  padding-top: 10px;

}

.cartItemPrice{
  padding-top: 10px;
}

.item

.cartItemPrice{
  font-size: 12px ;
}
.removeItem{

  font-size: 12px;
  color: burlywood;
  border: none;
}
.removeItem:hover{
  cursor: pointer;
}

